[package]
name = "reflectron"
version = "0.1.0"
edition = "2021"
description = "REFLECTRON configuration management tool"
license = "AGPL-3.0"
homepage = "https://github.com/OtherJohnGray/reflectron"
repository = "https://github.com/OtherJohnGray/reflectron"
readme = "README.md"
keywords = ["zfs", "incus", "vm", "provisioning", "zfsbootmenu", "devops", "configuration management"]
categories = ["virtualization", "filesystem", "command-line-utilities"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.32"
tempfile = "3.13.0"
ssh2 = "0.9.4"
sled = "0.34.7"
bincode = "1.3.3"
strum = "0.26.3"
strum_macros = "0.26.3"
